Enabling integ test case for context aware segments
Signed-off-by: RS146BIJAY <rishavsagar4b1@gmail.com>