@@ -94,7 +94,6 @@ import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardOpenOption;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -155,7 +154,7 @@ public abstract class AbstractSnapshotIntegTestCase extends ParameterizedStaticS
 
     @Override
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return Arrays.asList(MockRepository.Plugin.class);
+        return List.of(MockRepository.Plugin.class, ContextAwareIndexPlugin.class);
     }
 
     @After
